--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,9 @@ dependencies:
   intl: 0.17.0
   flutter_layout_grid: 2.0.1
   flutter_rating_bar: 4.0.1
-  go_router: ^6.5.5
-  flutter_riverpod: ^2.3.5
+  go_router: 6.5.5
+  flutter_riverpod: 2.3.5
+  rxdart: 0.27.7
 
 dev_dependencies:
   flutter_test:
