--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,11 +3,9 @@ name: Run tests
 on: [push, workflow_dispatch]
 
 jobs:
-build:
-runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-steps:
-- uses: actions/checkout@v3
-
-- name: Run tests
-run: flutter test
+    steps:
+    - uses: actions/checkout@v3
+    - run: flutter test
