--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   go_router: 6.5.5
   flutter_riverpod: 2.3.5
   rxdart: 0.27.7
+  sembast: ^3.4.4
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
