--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   rxdart: 0.27.7
   sembast: ^3.4.4
   path_provider: ^2.0.15
+  riverpod_annotation: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -31,6 +32,8 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: 2.0.1
   mocktail: 0.3.0
+  riverpod_generator: ^2.1.5
+  build_runner: ^2.4.4
 
 # Custom app icon. For more info see: https://pub.dev/packages/flutter_launcher_icons
 flutter_icons:
