--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,18 +12,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_launcher_icons: 0.10.0
+  flutter_launcher_icons: 0.13.1
   flutter_localizations:
     sdk: flutter
   intl: 0.18.0
   flutter_layout_grid: 2.0.1
   flutter_rating_bar: 4.0.1
   go_router: 6.5.5
-  flutter_riverpod: 2.3.5
+  flutter_riverpod: 2.3.6
   rxdart: 0.27.7
-  sembast: ^3.4.4
-  path_provider: ^2.0.15
-  riverpod_annotation: ^2.1.0
+  sembast: 3.4.4
+  path_provider: 2.0.15
+  riverpod_annotation: 2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -32,8 +32,8 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: 2.0.1
   mocktail: 0.3.0
-  riverpod_generator: ^2.1.5
-  build_runner: ^2.4.4
+  riverpod_generator: 2.2.3
+  build_runner: 2.4.4
 
 # Custom app icon. For more info see: https://pub.dev/packages/flutter_launcher_icons
 flutter_icons:
