--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,28 +12,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_launcher_icons: 0.13.1
+  flutter_launcher_icons: ^0.14.1
   flutter_localizations:
     sdk: flutter
-  intl: 0.18.0
-  flutter_layout_grid: 2.0.1
+  intl: 0.19.0
+  flutter_layout_grid: ^2.0.7
   flutter_rating_bar: 4.0.1
-  go_router: 6.5.5
-  flutter_riverpod: 2.3.6
-  rxdart: 0.27.7
-  sembast: 3.4.4
-  path_provider: 2.0.15
-  riverpod_annotation: 2.1.1
+  go_router: ^14.3.0
+  flutter_riverpod: ^2.6.1
+  rxdart: ^0.28.0
+  sembast: ^3.7.2
+  path_provider: ^2.1.4
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
-  flutter_lints: 2.0.1
-  mocktail: 0.3.0
-  riverpod_generator: 2.2.3
-  build_runner: 2.4.4
+  flutter_lints: ^4.0.0
+  mocktail: ^1.0.4
+  riverpod_generator: ^2.4.0
+  build_runner: ^2.4.11
 
 # Custom app icon. For more info see: https://pub.dev/packages/flutter_launcher_icons
 flutter_icons:
