--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   sembast: ^3.7.2
   path_provider: ^2.1.4
   riverpod_annotation: ^2.6.1
+  dio: ^5.7.0
+  cached_network_image: ^3.4.1
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +38,8 @@ dev_dependencies:
   mocktail: ^1.0.4
   riverpod_generator: ^2.4.0
   build_runner: ^2.4.11
+  freezed: ^2.5.2
+  json_serializable: ^6.8.0
 
 # Custom app icon. For more info see: https://pub.dev/packages/flutter_launcher_icons
 flutter_icons:
