--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,12 @@ dependencies:
   sembast: ^3.7.2
   path_provider: ^2.1.4
   riverpod_annotation: ^2.6.1
+  firebase_core: ^3.9.0
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.6.3
+  firebase_storage: ^12.4.2
+  flutter_staggered_grid_view: ^0.7.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +40,8 @@ dev_dependencies:
   mocktail: ^1.0.4
   riverpod_generator: ^2.4.0
   build_runner: ^2.4.11
+  custom_lint: ^0.7.0
+  riverpod_lint: ^2.6.3
 
 # Custom app icon. For more info see: https://pub.dev/packages/flutter_launcher_icons
 flutter_icons:
